--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -2,5 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="solutions.brightsoft.TaskList">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="TaskList"></application>
+	<application android:label="TaskList">
+        <activity 
+		    android:name="com.microsoft.windowsazure.mobileservices.authentication.RedirectUrlActivity" 
+		    android:launchMode="singleTop" android:noHistory="true"> 
+		    <intent-filter> 
+		        <action android:name="android.intent.action.VIEW" /> 
+		        <category android:name="android.intent.category.DEFAULT" /> 
+		        <category android:name="android.intent.category.BROWSABLE" /> 
+		        <data android:scheme="appname" android:host="easyauth.callback" /> 
+		    </intent-filter> 
+		</activity>
+	</application>
+
 </manifest>
