--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -59,5 +59,6 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Validation" version="2.4.15" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="3.0.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Facebook.iOS" version="4.26.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="xamarinios10" />
 </packages>
