* DroidLoginProvider.cs: Client flow for iOS and Facebook. Server flow for Android.
* Info.plist:
* packages.config:
* TaskList.iOS.csproj:
* iOSLoginProvider.cs:

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -45,6 +45,21 @@
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false />
+	<false/>
+	<key>FacebookAppID</key>
+	<string>1130343070431968</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbauth2</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1130343070431968</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
