--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,18 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="solutions.brightsoft.TaskList">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="solutions.brightsoft.tasklist">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="TaskList">
-        <activity 
-		    android:name="com.microsoft.windowsazure.mobileservices.authentication.RedirectUrlActivity" 
-		    android:launchMode="singleTop" android:noHistory="true"> 
-		    <intent-filter> 
-		        <action android:name="android.intent.action.VIEW" /> 
-		        <category android:name="android.intent.category.DEFAULT" /> 
-		        <category android:name="android.intent.category.BROWSABLE" /> 
-		        <data android:scheme="appname" android:host="easyauth.callback" /> 
-		    </intent-filter> 
-		</activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 	</application>
-
 </manifest>
