--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bolts" version="1.4.0.1" targetFramework="monoandroid71" />
   <package id="Microsoft.Azure.Mobile.Client" version="4.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="PCLCrypto" version="2.0.147" targetFramework="monoandroid71" />
   <package id="PInvoke.BCrypt" version="0.5.97" targetFramework="monoandroid71" />
   <package id="PInvoke.Kernel32" version="0.5.97" targetFramework="monoandroid71" />
@@ -76,5 +77,6 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Facebook.Android" version="4.24.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.270" targetFramework="monoandroid71" />
 </packages>
